homework/7.advanced-abstractions/deployment prometheus.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: prometheus
spec:
  serviceName: prometheus-svc
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
#  strategy:
#    rollingUpdate:
#      maxSurge: 0
#      maxUnavailable: 1
#    type: RollingUpdate
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      serviceAccount: prometheus
      containers:       
      - image: prom/prometheus:v2.19.2
        name: prometheus
        ports:
        - containerPort: 9090
        volumeMounts:
        - name: cfg
          mountPath: /etc/prometheus
      volumes:
      - name: cfg
        configMap:
          name: prometheus-cfg

#        resources:
#          requests:
#            cpu: 100m
#            memory: 2000Mi
#          limits:
#            cpu: 100m
#            memory: 2000Mi
    

  volumeClaimTemplates:
    - metadata:
        name: p-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 5Gi
        storageClassName: csi-ceph-hdd-ms1
#get storages
#kubectl get storageclass
