homework/7.advanced-abstractions/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-svc
spec:
  ports:
  - port: 9090
    targetPort: 9090
  selector:
    app: prometheus
  type: ClusterIP
